# signal-triangulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  algorithm design.md  analysis.txt  gmon.out  plot_clusters_from_stdin.py  plot_from_stdin.py  plotter_2D.py  plotter_3D.py  signal_records_1762941239151.json  signals_field.json  signals_field_simon.json  signals_first_test.json  signals_water.json  signals_water_2.json
.github/: copilot-instructions.md
Algorithm_designs/: GPT algorithm design.md  algorithm_1_design.md
Polaris/: settings.gradle.kts
Polaris/app/: build.gradle.kts
Polaris/app/src/androidTest/java/com/example/polaris/: UnitTest.kt
Polaris/app/src/main/: AndroidManifest.xml
Polaris/app/src/main/java/com/example/polaris/: AccuracyTestActivity.kt  DebugActivity.kt  ExportActivity.kt  LocationStream.kt  MainActivity.kt  MeasureSourceActivity.kt  PolarisApp.kt  RSSIStream.kt  StartActivity.kt
Polaris/app/src/main/res/color/: bottom_nav_color.xml
Polaris/app/src/main/res/drawable/: bg_app_gradient.xml  bg_toolbar_rounded.xml  ic_debug.xml  ic_marker_drop.xml  ic_polaris_logo.xml
Polaris/app/src/main/res/layout/: activity_accuracy_test.xml  activity_debug.xml  activity_export.xml  activity_main.xml  activity_measure_source.xml  activity_start.xml  dialog_estimate_map.xml  dialog_server_config.xml  item_wifi_choice.xml
Polaris/app/src/main/res/menu/: bottom_nav_menu.xml  drawer_menu.xml
Polaris/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Polaris/app/src/test/java/com/example/polaris/: UnitTest.kt
Polaris/gradle/: libs.versions.toml
Polaris/gradle/wrapper/: gradle-wrapper.properties
TestAPP/app/: build.gradle.kts
TestAPP/app/src/main/: AndroidManifest.xml
TestAPP/app/src/main/java/com/example/testapp/: MainActivity.kt
TestAPP/app/src/main/res/layout/: activity_main.xml
TestAPP/app/src/main/res/values/: strings.xml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  signal-triangulation
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  integration_tests[1]_include.cmake  unit_tests[1]_include.cmake
oldRecordings/: Backyard.json  CampusField3.json  CampusField4.json  CircleHouse.json  CombinedHouse.json  CornerSquare.json  FREDRIKNOTAG.json  Faffe1.json  FarLine.json  FootballField1.json  FootballField2.json  FredrikFaffe1.json  FredrikFaffe2.json  FredrikFaffe5.json  HalfMoon3.json  Lshape2.json  NearAndFar.json  Nordenlake.json  OEllerBVemVet.json  OhLongJohnson.json  OhToWalkAboutAPool.json  SquareFill.json  UerTestFaffe.json  far.json  fredrikFabian.json  mediumclose180degrees.json  water_1.json
plotting/: plot_clusters_from_stdin.py  plot_from_stdin.py  plotter_3D.py
recordings/: CampusField1.json  CampusField2.json  HalfMoon1.json  HalfMoon2.json  MergedUrban.json  OEllerBVemVet.json  fabian.json  gridfar.json  house_one_side.json  lshape.json  merge.json  signals_new_field.json  simonFabiano.json  still.json  walking.json  water_all.json  water_average.json
scripts/: FileTransfer.sh  cleanup_port_forward.ps1  install-adb.ps1  install-adb.sh  json_to_csv.py  setup_port_forward.ps1  start_server.sh  test_file_receiver.sh  tune_hyperparams.py
src/: file_receiver_main.cpp  main.cpp  main_rest_api.cpp
src/core/: AlgorithmParameters.h  CliParser.cpp  CliParser.h  Cluster.cpp  Cluster.h  Cluster.hpp  ClusteredTriangulationAlgorithm.cpp  ClusteredTriangulationAlgorithm.h  ClusteredTriangulationAlgorithm1.cpp  ClusteredTriangulationAlgorithm1.h  ClusteredTriangulationAlgorithm2.cpp  ClusteredTriangulationAlgorithm2.h  ClusteredTriangulationBase.cpp  ClusteredTriangulationBase.h  DataPoint.cpp  DataPoint.h  DatabaseHandler.cpp  DatabaseHandler.h  FileTransfer.sh  ITriangulationAlgorithm.h  JsonSignalParser.cpp  JsonSignalParser.h  PointDistanceCache.hpp  TriangulationService.cpp  TriangulationService.h
src/network/: Server.cpp  Server.h
src/rest/: AlgorithmRunner.cpp  AlgorithmRunner.h  PolarisServer.cpp  PolarisServer.h
src/tools/: plane_test.cpp  plane_test.h
src/utils/: FileReceiver.cpp  FileReceiver.h
tests/: CMakeLists.txt  test_CTA1.cpp  test_CTA2.cpp  test_CTA_base.cpp  test_cluster.cpp  test_datapoint.cpp  test_distance_cache.cpp  test_json_parser.cpp  test_plane_fit.cpp  test_triangulation.cpp
